[package]
name = "web3-safe-lock-esp32"
version = "0.1.0"
authors = ["drhongos <lucasziegenfuhs@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1.0.80"
serde = "1.0.197"
serde_json = "1.0.114"
embedded-svc = { version = "0.27", default-features = false }
alloy-dyn-abi = { version = "0.6.4", features = ["eip712"] }
alloy-sol-macro = "0.6.4"
alloy-sol-types = { version = "0.6.4", features = ["eip712-serde"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"]}
alloy-primitives = "0.6.4"

[build-dependencies]
embuild = "0.31.3"

# Patches added
[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
